cmake_minimum_required(VERSION 3.7)
project(AlgorithmTraining)

set(CMAKE_CXX_STANDARD_REQUIRED 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(PROJECT_ROOT_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
set(PROJECT_OPENSOURCE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/OpenSource")
set(LEETCODE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Algorithms/leetcode")
set(PROJECT_OUTPUT_BIN_PATH "${CMAKE_BINARY_DIR}/bin")
set(PROJECT_OUTPUT_LIB_PATH "${CMAKE_BINARY_DIR}/lib")
set(PROJECT_OUTPUT_TEST_PATH "${CMAKE_BINARY_DIR}/test")


add_subdirectory(${PROJECT_OPENSOURCE_PATH})
add_subdirectory(test)

