cmake_minimum_required(VERSION 3.7)
project(AlgorithmTraining)

enable_testing()

set(CMAKE_CXX_STANDARD_REQUIRED 17)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(PROJECT_ROOT_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
set(PROJECT_OPENSOURCE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/OpenSource")
set(LEETCODE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/leetcode")
set(DATA_STRUCT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/data_struct")
set(PROJECT_OUTPUT_BIN_PATH "${CMAKE_BINARY_DIR}/bin")
set(PROJECT_OUTPUT_LIB_PATH "${CMAKE_BINARY_DIR}/lib")
set(PROJECT_OUTPUT_TEST_PATH "${CMAKE_BINARY_DIR}/test")

set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-Wall -Wextra -g -O0)

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/GoogleTest.cmake)

add_subdirectory(test)

