MACRO(add_leetcode_test problem_num)
    set(leetcode_target "unittest_${problem_num}")
    add_executable(${leetcode_target} ${LEETCODE_PATH}/${problem_num}.cpp)
    target_link_libraries(${leetcode_target} PUBLIC gtest_main)
    target_include_directories(${leetcode_target} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../)
    add_test(NAME ${leetcode_target} COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${leetcode_target})
ENDMACRO()

add_leetcode_test(96)
add_leetcode_test(547)
add_leetcode_test(503)
add_leetcode_test(739)
add_leetcode_test(684)
add_leetcode_test(200)
add_leetcode_test(200_dfs)
add_leetcode_test(1208)
add_leetcode_test(209v2)
add_leetcode_test(560)
add_leetcode_test(974)
add_leetcode_test(1094)
add_leetcode_test(1109)
add_leetcode_test(210_topological_sort)
add_leetcode_test(310_dfs)
add_leetcode_test(310_topological)
add_leetcode_test(179_sort)
add_leetcode_test(1353_greedy)
add_leetcode_test(93_backtrack)
add_leetcode_test(838_dp)
add_leetcode_test(752_bfs)
add_leetcode_test(678_stack)
add_leetcode_test(127_bfs)
add_leetcode_test(139_bfs)
add_leetcode_test(139_dp)
add_leetcode_test(200_bfs)
add_leetcode_test(688_dfs)
add_leetcode_test(5_dp)
add_leetcode_test(516_dp)
add_leetcode_test(1143_dp)
add_leetcode_test(300_dp)
add_leetcode_test(934_bfs)


add_executable(data_struct_test
    ${DATA_STRUCT_PATH}/disjoint_set.cpp
    ${DATA_STRUCT_PATH}
)
target_link_libraries(data_struct_test PUBLIC gtest_main)

add_test(NAME data_struct_test COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/data_struct_test)
